Complete getOrderById